# sign-language-translator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/components/: camera.yaml  processor.yaml
src/: main.py
src/core/: __init__.py  logging.py
src/core/config/: __init__.py  exception.py  loader.py  registry.py  schema.py
src/input/: __init__.py  exceptions.py  ingestion.py  preprocessing.py
src/ui/: __init__.py  dashboard.py  window.py
src/ui/components/: __init__.py  camera_widget.py  control_panel.py  status_bar.py
tests/: conftest.py
tests/unit/: test_camera_ingestion.py  test_config_registry.py
